[gd_scene load_steps=2 format=3 uid="uid://cag2rvk6mosnn"]

[ext_resource type="Script" path="res://global_src/sound.gd" id="1_fw7jb"]

[node name="Sound" type="Node"]
script = ExtResource("1_fw7jb")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="ClickStandartPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="ClickStartGamePlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
